# flashcardAI

./: CLAUDE.md  deploy-books.sh  deploy.sh
.claude/: settings.local.json
.claude/commands/: generate-flashcards.md
.superpowers/brainstorm/24226-1776599261/content/: chapter-panel.html
backend/: .env.example  pyproject.toml  start.sh
backend/app/: auth.py  books.py  db.py  main.py  progress.py
backend/tests/: conftest.py  test_auth.py  test_books.py  test_progress.py
books/: sample.json  sample.md  super-thinking-the-big-book-of-mental-models.json  super-thinking-the-big-book-of-mental-models.md
deploy/: flashcard-ai.service  nginx-flashcard-ai.conf
docs/superpowers/plans/: 2026-04-19-chapter-selection-and-back-button.md  2026-04-19-flashcard-app.md  2026-04-25-quiz-back-next-skip-review.md  2026-04-25-quiz-deck-options-sync-fix.md  2026-04-25-restore-session-tracking-and-inspect-options.md  2026-04-26-frontend-refactor.md
docs/superpowers/specs/: 2026-04-19-chapter-selection-and-back-button-design.md  2026-04-19-flashcard-app-design.md  2026-04-25-quiz-back-next-skip-review-design.md  2026-04-25-quiz-deck-options-sync-fix-design.md  2026-04-25-restore-session-tracking-and-inspect-options-design.md  2026-04-26-frontend-refactor-design.md
frontend/: api.js  app.js  idb.js  index.html  manifest.json  styles.js  sw.js
frontend/components/: ChapterSheet.js  ErrorBoundary.js
frontend/hooks/: useQuizSession.js
frontend/lib/: hooks.mjs  preact.mjs
scripts/: add_chapter_sections.py  add_subtopic_sections.py
(+1 files in other folders)
